compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__as_module_const.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 248
expression: "\n          pub const data = <<\n            0x1,\n            2,\n            2:size(16),\n            0x4:size(32),\n            \"Gleam\":utf8,\n            4.2:float,\n            <<\n              <<1, 2, 3>>:bits,\n              \"Gleam\":utf8,\n              1024\n            >>:bits\n          >>\n        "
---
import { toBitString, sizedInt, stringBits, float64Bits } from "../gleam.mjs";

export const data = toBitString([
  0x1,
  2,
  sizedInt(2, 16),
  sizedInt(0x4, 32),
  stringBits("Gleam"),
  float64Bits(4.2),
  toBitString([toBitString([1, 2, 3]).buffer, stringBits("Gleam"), 1024]).buffer,
]);

