compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__bit_string.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 137
expression: "\nfn go(x) {\n  <<x:bit_string, \"Gleam\":utf8>>\n}\n"
---
import { toBitString, stringBits } from "../gleam.mjs";

function go(x) {
  return toBitString([x.buffer, stringBits("Gleam")]);
}

