compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__discard_sized.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 192
expression: "\nfn go(x) {\n  let <<_:16, _:8>> = x\n}\n"
---
import { throwError } from "../gleam.mjs";

function go(x) {
  if (!(x.length == 3)) {
    throwError(
      "assignment_no_match",
      "my/mod",
      3,
      "go",
      "Assignment pattern did not match",
      { value: x }
    );
  }
  return x;
}

