compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__float.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 49
expression: "\nfn go() {\n  <<1.1:float>>\n}\n"
---
import { toBitString, float64Bits } from "../gleam.mjs";

function go() {
  return toBitString([float64Bits(1.1)]);
}

