compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__match_float.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 214
expression: "\nfn go(x) {\n  let <<a:float, b:int>> = x\n}\n"
---
import { throwError } from "../gleam.mjs";

function go(x) {
  if (!(x.length == 9)) {
    throwError(
      "assignment_no_match",
      "my/mod",
      3,
      "go",
      "Assignment pattern did not match",
      { value: x }
    );
  }
  let a = x.floatAt(0);
  let b = x.byteAt(8);
  return x;
}

