compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__match_rest.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 225
expression: "\nfn go(x) {\n  let <<_, b:binary>> = <<1,2,3>>\n}\n"
---
import { throwError, toBitString } from "../gleam.mjs";

function go(x) {
  let $ = toBitString([1, 2, 3]);
  if (!($.length >= 1)) {
    throwError(
      "assignment_no_match",
      "my/mod",
      3,
      "go",
      "Assignment pattern did not match",
      { value: $ }
    );
  }
  let b = $.sliceAfter(1);
  return $;
}

