compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__sized.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 60
expression: "\nfn go() {\n  <<256:4>>\n}\n"
---
import { toBitString, sizedInteger } from "../gleam.mjs";

function go() {
  return toBitString([sizedInteger(256, 4)]);
}

