compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__variable.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
expression: "\nfn go(x) {\n  <<256, 4, x>>\n}\n"

---
import { toBitString } from "../gleam.mjs";

function go(x) {
  return toBitString([256, 4, x]);
}

