compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_strings__variable_sized.snap
---
source: compiler-core/src/javascript/tests/bit_strings.rs
assertion_line: 82
expression: "\nfn go(x, y) {\n  <<x:size(y)>>\n}\n"
---
import { toBitString, sizedInt } from "../gleam.mjs";

function go(x, y) {
  return toBitString([sizedInt(x, y)]);
}

